// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search > Search actionVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div>
    <div
      class="t-search"
    >
      <div
        class="t-search__input-box t-search__input-box--square"
      >
        <svg
          class="t-icon t-icon-search"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="search"
          >
            <path
              d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M15.8027 15.8037L21.106 21.107"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        <input
          class="t-input__keyword"
          enterkeyhint="search"
          placeholder="搜索预设文案"
          style="--td-search-cursor-color: #0052d9;"
          type="search"
        />
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Search > Search baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--square"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="搜索预设文案"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--square"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="输入tdesign，有预览效果"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Search > Search maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--square"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="最多输入10个汉字"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--square"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="最多输入10个字符（汉字算两个）"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Search > Search mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Search 搜索框
  </h1>
  <p
    class="summary"
  >
    用于用户输入搜索信息，并进行页面内容搜索。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础搜索框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="搜索预设文案"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="输入tdesign，有预览效果"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        字数限制
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="最多输入10个汉字"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="最多输入10个字符（汉字算两个）"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        获取焦点后显示取消按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="搜索预设文案"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        搜索框形状
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="搜索预设文案"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--round"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword"
                enterkeyhint="search"
                placeholder="搜索预设文案"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        默认状态其他对齐方式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div>
          <div
            class="t-search"
          >
            <div
              class="t-search__input-box t-search__input-box--square"
            >
              <svg
                class="t-icon t-icon-search"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="search"
                >
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M15.8027 15.8037L21.106 21.107"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <input
                class="t-input__keyword t-search--center"
                enterkeyhint="search"
                placeholder="搜索预设文案"
                style="--td-search-cursor-color: #0052d9;"
                type="search"
              />
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Search > Search otherVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div>
    <div
      class="t-search"
    >
      <div
        class="t-search__input-box t-search__input-box--square"
      >
        <svg
          class="t-icon t-icon-search"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="search"
          >
            <path
              d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M15.8027 15.8037L21.106 21.107"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        <input
          class="t-input__keyword t-search--center"
          enterkeyhint="search"
          placeholder="搜索预设文案"
          style="--td-search-cursor-color: #0052d9;"
          type="search"
        />
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Search > Search shapeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--square"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="搜索预设文案"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="example-search"
  >
    <div>
      <div
        class="t-search"
      >
        <div
          class="t-search__input-box t-search__input-box--round"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="search"
            >
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.8027 15.8037L21.106 21.107"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <input
            class="t-input__keyword"
            enterkeyhint="search"
            placeholder="搜索预设文案"
            style="--td-search-cursor-color: #0052d9;"
            type="search"
          />
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;
